--- a/Frontend/src/Components/Header/Header.module.css
+++ b/Frontend/src/Components/Header/Header.module.css
@@ -1,3 +1,4 @@
+
 .heading {
     color: #262626;
     font-style: normal;
@@ -19,10 +20,41 @@ display: flex;
     align-items: center;
 }
 
+.address {
+    font-weight: 500;
+font-size: 16px;
+line-height: 20px;
 
-@media screen and (max-width: 1100px) {
+color: #1AAABA;
+cursor: pointer;
+margin-right: 5px;
+}
+
+
+@media screen and (max-width: 1200px) {
     .heading {
         margin-top: 35px;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+    .heading {
+        margin-top: 110px;
+    }
+
+    .account {
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .account > * {
+        flex-basis: 100%;
+        margin-top: 5px;
+    }
+
+    .address {
+        text-align: center;
     }
 
 }
