--- a/Frontend/src/Components/UI/LowerCardNavBar/NavBarInputGroup/NavBarInputGroup.module.scss
+++ b/Frontend/src/Components/UI/LowerCardNavBar/NavBarInputGroup/NavBarInputGroup.module.scss
@@ -1,16 +1,26 @@
 .inputGroup {
     max-width: 200px !important;
-    flex-grow:1 ;
-    font-weight: 300;
+font-weight: 300;
     font-size: 10px;
     line-height: 17px;
     text-align: center;
-    color: rgba(38, 38, 38, 0.3);
     margin-left: auto;
 
     input {
-        font-size: 0.85rem;
+        font-size: 0.8rem;
+        border-color: rgba(38, 38, 38, 0.8) !important;
+        color: rgba(38, 38, 38, 1) !important;
+    }
 
+    input::placeholder {
+        color: rgba(38, 38, 38, 0.75) !important;
+
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .inputGroup {
+        margin-left: 0px;
     }
 }
 
@@ -18,6 +28,9 @@
     font-size: 20px;
     display: flex;
     align-items: center;
+    margin-left: 2px !important;
+    color: rgba(38, 38, 38, 0.8);
+
 }
 
 @media screen and (min-width: 768px) {
