--- a/Frontend/src/Components/Card/TabBar/ProposalNavBar.module.scss
+++ b/Frontend/src/Components/Card/TabBar/ProposalNavBar.module.scss
@@ -6,5 +6,15 @@
         padding-left: 0px !important;
     }
 
+
+
 }
+
+@media screen and (max-width: 1200px) {
+    .navItem {
+                margin-top: -12px;
+
+            }
+        }
+
 
