--- a/Frontend/src/Components/UI/LowerCardList/LowerCardTitle/LowerCardTitle.module.scss
+++ b/Frontend/src/Components/UI/LowerCardList/LowerCardTitle/LowerCardTitle.module.scss
@@ -4,7 +4,7 @@ font-weight: 600;
 font-size: 1rem;
 line-height: 20px;
 margin-left: 2px;
-
+word-wrap: break-word;
 /* identical to box height */
 
 
