--- a/Frontend/src/Components/ProposalCard/ProposalCard.module.scss
+++ b/Frontend/src/Components/ProposalCard/ProposalCard.module.scss
@@ -1,3 +1,11 @@
 .proposalCard {
     margin-top: 10px;
 }
+
+
+@media screen and (max-width: 991px) {
+    .cardBody {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+}
