--- a/Frontend/src/Containers/Dashboard/Dashboard.module.scss
+++ b/Frontend/src/Containers/Dashboard/Dashboard.module.scss
@@ -2,3 +2,12 @@
     padding-left: 10px !important;
     padding-right: 10px !important;
 }
+
+.myProposalHeading {
+    display: flex;
+    justify-content: center;
+    color: #262626;
+    font-size: 30px;
+    font-weight: 550;
+    margin-top: 10px;
+}
