Used scss version of bootstrap and removed _status params in get_active_proposals

--- a/Frontend/src/styles/App.scss
+++ b/Frontend/src/styles/App.scss
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('~bootstrap/dist/css/bootstrap.min.css');
+
+
+
+// $theme-colors: (
+//   "info": black,
+//   "primary": black,
+//   "success": black,
+
+
+// );
+
+@import '~bootstrap/scss/bootstrap';
 
 $sidebar-bg-color: #1AAABA;
 $submenu-bg-color: rgba(255, 255, 255, 0.05);
