Created Footer Component

--- a/Frontend/src/Containers/Home/Home.module.scss
+++ b/Frontend/src/Containers/Home/Home.module.scss
@@ -1,6 +1,6 @@
 .home {
     background: linear-gradient(0deg, rgba(38, 38, 38, 0.05), rgba(38, 38, 38, 0.05)), #FFFFFF;
-    height: 100%;
+    flex-grow: 1;
 }
 
 .proposalCard {
