Made changes to the dashboard

--- a/Frontend/src/Containers/Dashboard/Dashboard.module.scss
+++ b/Frontend/src/Containers/Dashboard/Dashboard.module.scss
@@ -1,6 +1,7 @@
 .infoCardContainer {
     padding-left: 7px !important;
     padding-right: 7px !important;
+    // height: 50px;
 }
 
 .myProposalHeading {
