--- a/Frontend/src/Containers/Dashboard/InfoCard/InfoCard.module.scss
+++ b/Frontend/src/Containers/Dashboard/InfoCard/InfoCard.module.scss
@@ -5,8 +5,9 @@
 }
 
 .cardBody{
-    height: 140px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    padding-left: 0.2rem !important;
+    padding-right: 0.2rem !important;
 }
