--- a/Frontend/src/Containers/Home/SlantedHeader/SlantedHeader.module.css
+++ b/Frontend/src/Containers/Home/SlantedHeader/SlantedHeader.module.css
@@ -1,6 +1,6 @@
 .slanted {
     background-color: #1AAABA;
-    height: 300px;
+    height: 450px;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%); 
     padding-left: 7px;
@@ -25,7 +25,6 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.75;
 
     /* background-image: url('../../../Assets/Images/Intersect4.png');
     opacity: 0.4;
@@ -40,22 +39,31 @@
     background-size: 1000px 450px;
     opacity: 0.4; */
 
-    background-image: url('../../../Assets/Images/Intersect1.png');
+    /* background-image: url('../../../Assets/Images/Intersect1.png');
     opacity: 0.3;
     background-size: auto 300px;
-    background-position: bottom right;
+    background-position: bottom right; */
+
+    /* background-image: url('../../../Assets/Images/Intersect7.png');
+    background-size: auto 350px;
+    background-position: top right; */
 
 }
 
 .tabularDataWrapper {
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
 }
 
 .firstRow {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 2px !important;
+}
+
+.thirdRow {
+    margin-top: 30px;
 }
 
 .button {
@@ -84,7 +92,6 @@ align-items: center;
 
 .secondRow {
     margin-top: 2.5em!important;
-    padding-left: 10px;
 }
 
 @media screen and (min-width: 992px) {
@@ -97,7 +104,7 @@ align-items: center;
     }
 
     .slanted {
-        height: 270px;
+        height: 365px;
     }
 }
 
@@ -174,4 +181,14 @@ align-items: center;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); 
 
     }
+}
+
+.slantedBackground {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    width: 500px;
+    margin-top: 17px;
+
 }
