Footer on dashboard page and solved sponsor bond precision problem

--- a/Frontend/src/styles/App.scss
+++ b/Frontend/src/styles/App.scss
@@ -2,13 +2,11 @@
 
 
 
-// $theme-colors: (
-//   "info": black,
-//   "primary": black,
-//   "success": black,
+$theme-colors: (
+  "info": #1AAABA,
 
 
-// );
+);
 
 @import '~bootstrap/scss/bootstrap';
 
