--- a/Frontend/src/Containers/Home/SlantedHeader/SlantedHeader.module.css
+++ b/Frontend/src/Containers/Home/SlantedHeader/SlantedHeader.module.css
@@ -92,6 +92,9 @@ color: #FFFFFF;
 display: flex;
 align-items: center;
 
+    justify-content: space-between;
+    width: 100%;
+
 }
 
 .secondRow {
