Made header responsive and changed footer styles for dashboard

--- a/Frontend/src/Components/Footer/Footer.module.scss
+++ b/Frontend/src/Components/Footer/Footer.module.scss
@@ -60,4 +60,12 @@ a:first-child > span.socialLink {
         padding-bottom: 60px;
     }
 
+    .footerColumn {
+        padding-left: 95px !important;  
+    }
+
+    .links {
+        padding-left: 150px !important;
+    }
+
 }
