--- a/Frontend/src/Components/Header/Header.module.css
+++ b/Frontend/src/Components/Header/Header.module.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     position: relative;
-    /* align-items: center; */
+    align-items: center;
 
 }
 
