--- a/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
+++ b/Frontend/src/Components/Card/DetailsModal/VoteList/Vote/Vote.module.scss
@@ -8,6 +8,10 @@
     // border-bottom: 1px solid rgba(38, 38, 38, 0.1);
 }
 
+.badgeContainer{
+    display: flex;
+    justify-content: flex-end;
+  }
 
 
 .proposalInfo {
@@ -209,6 +213,12 @@
     }
 
 
+    .badgeContainer{
+        display: flex;
+        justify-content: flex-start;
+      }
+    
+
 
     // .secondRow > *, .firstRow > span:last-child {
     //     width: 100%;
@@ -216,6 +226,7 @@
     // }
 
   }
+
 
 
 
