Period in dashboard

--- a/Frontend/src/Containers/Dashboard/Dashboard.module.scss
+++ b/Frontend/src/Containers/Dashboard/Dashboard.module.scss
@@ -12,3 +12,10 @@
     font-weight: 550;
     margin-top: 10px;
 }
+
+.period {
+    text-align: center;
+    color: #262626;
+    font-weight: 600;
+    font-size: 1.15rem;
+}
