--- a/Frontend/src/Containers/ProposalCreationPage/ProposalCreationPage.module.css
+++ b/Frontend/src/Containers/ProposalCreationPage/ProposalCreationPage.module.css
@@ -93,3 +93,13 @@ padding-right: 0px;
     margin-left: 2px;
 }
 
+.milestoneFakeInput {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    left: 50%;
+    z-index: -1000;
+
+}
+
+
