--- a/Frontend/src/Components/Card/ProgressReportList/ProgressReport/Proposal.module.scss
+++ b/Frontend/src/Components/Card/ProgressReportList/ProgressReport/Proposal.module.scss
@@ -191,5 +191,22 @@
 
 }
 
+@media screen and (min-width: 768px) {
+    .infosModal {
+        max-width: 68% !important;
+        min-width: 68% !important;
+        width: 68% !important;
+
+    }
+
+    .progressBarModal {
+        min-width: 32% !important;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: flex-end;
+    }
+}
+
+
   
 
