Added create new proposal button on landing page

--- a/Frontend/src/Containers/Home/Home.module.scss
+++ b/Frontend/src/Containers/Home/Home.module.scss
@@ -18,5 +18,9 @@
         max-width: 1100px;
         
     }
+    .upperCardContainer {
+        padding-right: 35px !important;
+        padding-left: 35px !important;
+    }
 
     }
