--- a/Frontend/src/Components/Card/DetailsModalProgressReport/DetailsModal.module.css
+++ b/Frontend/src/Components/Card/DetailsModalProgressReport/DetailsModal.module.css
@@ -27,3 +27,12 @@
 .progressBarContainer > div {
     margin-left: 3px
 }
+
+.fakeInput {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    left: 50%;
+    z-index: -1000;
+
+}
