--- a/Frontend/src/Components/UI/ProgressText/ProgressText.module.scss
+++ b/Frontend/src/Components/UI/ProgressText/ProgressText.module.scss
@@ -6,9 +6,8 @@ line-height: 15px;
 color: rgba(38, 38, 38, 0.85);
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
-    /* Safari only override */
-    ::i-block-chrome,.progressText {
-     font-size: 0.59rem
+@supports (background: -webkit-canvas(squares)) {
+    .progressText {
+        font-size: 0.59rem
     }
-}
+  }
