--- a/Frontend/src/Components/UI/ProgressText/ProgressText.module.scss
+++ b/Frontend/src/Components/UI/ProgressText/ProgressText.module.scss
@@ -5,3 +5,9 @@ font-size: 0.7rem;
 line-height: 15px;
 color: rgba(38, 38, 38, 0.85);
 }
+
+@supports (background: -webkit-canvas(squares)) {
+    .progressText {
+        font-size: 0.59rem
+    }
+  }
