--- a/Frontend/src/Assets/Styles/App.scss
+++ b/Frontend/src/Assets/Styles/App.scss
@@ -1,5 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+.slick-slide {
+  div {
+    padding: 10px;
+  }
+}
+
+.slick-prev {
+  margin-left: -50px;
+  @media screen and (max-width: 768px) {
+    margin-left: -10px;
+  }
+}
+
+.slick-next {
+  margin-right: -30px;
+  @media screen and (max-width: 768px) {
+    margin-right: 5px;
+  }
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: rgba(26, 170, 186, 1);
+  font-size: 15px;
+  // line-height: 10px;
+  padding: 10px;
+  // border-radius: 50%;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  font-weight: bold !important;
+  // box-shadow:0px 0px 8px -2px rgba(0, 0, 0, 0.5);
+}
+.slick-prev:before {
+  content: '';
+  background: url(../Images/arrowLeft.png);
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+}
+.slick-next:before {
+  content: '';
+  background: url(../Images/arrowRight.png);
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+}
 @media screen and (min-width: 650px) {
   .modal-mdxl {
     max-width: 630px !important;
